<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_30">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/welcome_view_pager"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_576"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/skip_button"
        android:layout_width="@dimen/dimen_100"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_login"
        android:backgroundTint="@color/button_material_light"
        android:gravity="center"
        android:text="@string/lb_skip"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_view_pager"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_started"
        android:layout_width="@dimen/dimen_120"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_login"
        android:backgroundTint="@color/button_material_light"
        android:gravity="center"
        android:text="@string/lb_start"
        android:textAllCaps="false"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next_button"
        app:layout_constraintStart_toEndOf="@+id/skip_button"
        app:layout_constraintTop_toBottomOf="@+id/welcome_view_pager"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="@dimen/dimen_100"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_login"
        android:backgroundTint="@color/button_material_light"
        android:gravity="center"
        android:text="@string/lb_next"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/skip_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/skip_button"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
