<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dimen_16"
        tools:ignore="ScrollViewSize">

        <ImageView
            android:id="@+id/image_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_288"
            android:src="@drawable/img_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription,MissingConstraints" />

        <TextView
            android:id="@+id/tv_sign_up"
            style="@style/TextScreenLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lb_sign_up_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_login"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_32"
            android:text="@string/lb_email"
            android:textColor="@color/black"
            android:textSize="@dimen/font_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sign_up"
            tools:ignore="MissingConstraints,SpUsage" />

        <EditText
            android:id="@+id/edittext_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_12"
            android:background="@drawable/shape_edittext_login"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/lb_enter_email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/dimen_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email"
            tools:ignore="Autofill,LabelFor,MissingConstraints,TextFields" />

        <TextView
            android:id="@+id/tv_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/edittext_email"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="24dp" />

        <LinearLayout
            android:id="@+id/ly_text_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_32"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_policy"
            tools:ignore="MissingConstraints">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/dimen_10"
                android:layout_weight="2"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/text_login_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lb_option"
                tools:ignore="MissingConstraints" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/dimen_10"
                android:layout_weight="2"
                android:background="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_login_social"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ly_text_option">

            <ImageView
                android:id="@+id/img_google"
                android:layout_width="@dimen/dimen_48"
                android:layout_height="@dimen/dimen_48"
                android:layout_marginEnd="@dimen/dimen_16"
                android:src="@drawable/img_google"
                tools:ignore="ContentDescription" />

            <View
                android:layout_width="@dimen/dimen_48"
                android:layout_height="0dp" />

            <ImageView
                android:id="@+id/img_facebook"
                android:layout_width="@dimen/dimen_48"
                android:layout_height="@dimen/dimen_48"
                android:src="@drawable/img_facebook"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ly_login_social"
            tools:ignore="MissingConstraints,Orientation">

            <Button
                android:id="@+id/btn_signIn"
                android:layout_width="@dimen/dimen_128"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_login"
                android:backgroundTint="@color/button_material_light"
                android:gravity="center"
                android:text="@string/lb_login"
                android:textAllCaps="false"
                tools:ignore="MissingConstraints,PrivateResource" />

            <View
                android:layout_width="@dimen/dimen_48"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/btn_continue"
                android:layout_width="@dimen/dimen_128"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_login"
                android:backgroundTint="@color/button_material_light"
                android:gravity="center"
                android:text="@string/lb_continue"
                android:textAllCaps="false"
                tools:ignore="MissingConstraints,PrivateResource" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
